<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/textView0"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/newGameOptions"
                android:textSize="20sp" >
            </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow222"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingTop="20dp" >

            <TextView
                android:id="@+id/textView1"
                android:text="@string/Difficulty"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <RadioGroup
            android:id="@+id/dificultiesOptions"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/easy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/Easy" />
             <RadioButton
                android:id="@+id/normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/Normal" />
            <RadioButton
                android:id="@+id/hard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/Hard" />
        </RadioGroup>

        <TableRow
            android:id="@+id/tableRow14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="20dp" >

            <Button
                android:id="@+id/back_button_engine_values_screen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickedStartNewGame"
                android:text="@string/startGame" />
        </TableRow>
    </TableLayout>

</ScrollView>