<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

     <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/textView0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="6"
                    android:gravity="center"
                    android:text="@string/Persistent"
                    android:textSize="20sp" >
                </TextView>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="200dp"
                    android:paddingRight="10dp"
                    android:text="@string/TimesBetterThanAndroid"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/speedRelationValue"
                    android:text="@string/pendentValue"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" >
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" >
            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" >
            </TableRow>

            <TableRow
                android:id="@+id/tableRow6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="20dp" >
            </TableRow>

            <TableRow
                android:id="@+id/tableRow7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" >

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="6"
                    android:gravity="center"
                    android:text="@string/ThisExecution"
                    android:textSize="20sp" >
                </TextView>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="200dp"
                    android:paddingRight="10dp"
                    android:text="@string/Ping"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/pingValue"
                    android:text="@string/pendentValue"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <TextView
                    android:id="@+id/textView13"
                    android:text="@string/ConnectionAvailable"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/connectionAvailableValue"
                    android:text="@string/pendentValue"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <TextView
                    android:id="@+id/textView15"
                    android:text="@string/ServerAvailable"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/serverAvailableValue"
                    android:text="@string/pendentValue"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <TextView
                    android:id="@+id/textView17"
                    android:text="@string/ConnectionType"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/connectionTypeValue"
                    android:text="@string/pendentValue"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" >
            </TableRow>

            <TableRow
                android:id="@+id/tableRow13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" >
            </TableRow>

            <TableRow
                 android:paddingTop="20dp"
                android:id="@+id/tableRow14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <Button
                    android:id="@+id/back_button_engine_values_screen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClickedGetMainView"
                    android:text="@string/Back" />

            </TableRow>
        </TableLayout>
        
</ScrollView>