<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/textView0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/pendentValue"
                android:textSize="20sp" >
            </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp" >

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/executionData"
                android:textSize="20sp" >
            </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow31"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingBottom="10dp" >

            <TextView
                android:id="@+id/textView31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/EstimatedValues"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="200dp"
                android:paddingRight="10dp"
                android:text="@string/AndroidEstimatedTime"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/estimatedAndroidTime"
                android:text="@string/pendentValue"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/textView3"
                android:text="@string/ServerEstimatedTime"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/estimatedOffloadingTime"
                android:text="@string/pendentValue"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow47"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/textView32"
                android:text="@string/ServerTime"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/estimatedServerTime"
                android:text="@string/pendentValue"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="20dp" >
        </TableRow>

        <TableRow
            android:id="@+id/tableRow41"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingBottom="10dp" >

            <TextView
                android:id="@+id/textView41"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/RealValues"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/textView10"
                android:text="@string/Offloading"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/offloadingDone"
                android:text="@string/pendentValue"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/offloadingOrAndroidTime"
                android:text="@string/pendentValue"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/overallTime"
                android:text="@string/pendentValue"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/textView15"
                android:text="@string/ServerTime"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/serverRealTime"
                android:text="@string/pendentValue"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="20dp" >

        </TableRow>

        <TableRow
            android:id="@+id/tableRow321"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:id="@+id/back_button_last_move_screen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickedGetMainView"
                android:text="@string/Back" />
        </TableRow>
    </TableLayout>

</ScrollView>